fix: versão estável com parcelamento corrigido e sem botão whatsapp nos produtos

--- a/app/templates/produtos.html
+++ b/app/templates/produtos.html
@@ -9,7 +9,7 @@
     <a href="{{ url_for('main.importar_produtos') }}" class="btn btn-sm btn-success">
       <i class="fas fa-file-upload"></i> Importar Planilha
     </a>
-    <a href="{{ url_for('main.parcelamento_rapido') }}" class="btn btn-sm btn-info">
+    <a href="{{ url_for('main.parcelamento_index') }}" class="btn btn-sm btn-info">
       <i class="fas fa-credit-card"></i> Simulação Rápida
     </a>
   </div>
