--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,7 +59,7 @@
                     <a class="nav-link text-white 
                         {% if request.endpoint and 'pedido' in request.endpoint %}active border-start border-3 border-primary{% endif %}" 
                         href="{{ url_for('main.listar_pedidos') }}">
-                        <i class="fas fa-file-invoice"></i> <span>Pedidos de Compra</span>
+                        <i class="fas fa-file-invoice"></i> <span>Compras</span>
                     </a>
                 </li>
                 <li class="nav-item">
