--- a/app/templates/parcelamento_index.html
+++ b/app/templates/parcelamento_index.html
@@ -58,4 +58,26 @@
         </div>
     </div>
 </div>
+
+<!-- jQuery precisa vir ANTES -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
+<!-- CSS e JS do Select2 -->
+<link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/css/select2.min.css" rel="stylesheet"/>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.1.0-rc.0/js/select2.min.js"></script>
+
+<script>
+    $(function() {
+        console.log("Ativando Select2...");
+        if ($.fn.select2) {
+            $('#produto_id').select2({
+                placeholder: "Digite ou selecione o produto",
+                allowClear: true,
+                width: '100%'
+            });
+        } else {
+            console.error("Select2 não carregou!");
+        }
+    });
+</script>
 {% endblock %}
