--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/clientes.css') }}" rel="stylesheet">
 </head>
 <body>
     <div class="d-flex">
@@ -43,8 +44,8 @@
                 </li>
                 <!-- Novos itens -->
                 <li class="nav-item">
-                    <a class="nav-link text-white {% if request.endpoint == 'main.clientes' %}active border-start border-3 border-primary{% endif %}" 
-                       href="{{ url_for('main.clientes') }}">
+                    <a class="nav-link text-white {% if request.endpoint == 'clientes.lista' %}active border-start border-3 border-primary{% endif %}" 
+                       href="{{ url_for('clientes.lista') }}">
                         <i class="fas fa-users"></i> <span>Clientes</span>
                     </a>
                 </li>
